Always consider gradients of different type different.

If a style changes between -webkit-linear-gradient and -linear-gradient,
consider them different. There is an issue with values being flipped in
order which made us not paint invalidate when the start/stop values were
flipped.

We could probably have optimized this by detecting this flip, but for
simplicity consider gradients of different type different.

Bug: 713407
Change-Id: I53d9a8d0f517fb3f587c34aeb8fa04f4432a69c7
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1970991
Reviewed-by: Anders Hartvoll Ruud <andruud@chromium.org>
Commit-Queue: Rune Lillesveen <futhark@chromium.org>
Cr-Commit-Position: refs/heads/master@{#725494}